crates/sgf-core/tests/snapshots/ops/add_bridge_lane_0_1.snap
---
source: crates/sgf-core/tests/ops.rs
expression: "report(&session, &result)"
---
Added bridge lane 0 <-> 1 (length 264)
touched: [0, 1]
inverse: RemoveLane { a: 0, b: 1 }
… and 6 other issues

--- gamestate
+++ gamestate
@@ -28892,6 +28892,12 @@
 				length=17
 			}
  
+			{
+				to=1
+				length=264
+				bridge=yes
+			}
+ 
 		}
 		flags=
 		{
@@ -28955,6 +28961,12 @@
 				length=19
 			}
  
+			{
+				to=0
+				length=264
+				bridge=yes
+			}
+ 
 		}
 		discovery=
 		{
